# fast_sudoku_solver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sudoku.py  sudoku_utils.py
examples/: example_usage.py  sudoku_puzzles.py
fast_sudoku_solver/: __main__.py  sudoku.py
src/fast_sudoku_solver/: __main__.py  old_sudoku.py  old_utils.py  services.py  sudoku.py  sudoku_solver.py  techniques.py
src/sudoku_solver/: techniques.py  utils.py
sudoku-solver/: sudoku.py  techniques.py  utils.py
sudoku_solver/: __main__.py  sudoku.py  techniques.py  utils.py
tests/: test_services.py  test_sudoku.py  test_sudoku_solver.py  test_techniques.py  test_utils.py
