[tool.poetry]
name = "fast_sudoku_solver"
version = "0.0.1"
description = "A fast Python Sudoku Solver for 9x9 puzzles using constraint propagation and brute force, powered by NumPy and with a command-line interface."
keywords = ["sudoku", "solver", "fast", "constraint", "propagation", "brute", "force"]
authors = ["CassiusCle"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CassiusCle/fast-sudoku_solver"
packages = [
    {include = "fast_sudoku_solver", from = "src"}
]

[tool.poetry.scripts]
sudoku_solver = "reader.__main__:main"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true
tag_message = "{new_version}"
tag_scope = "default"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"sudoku_solver/__init__.py" = ["{version}"]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

